# solana-game

./: .browserslistrc  .gitignore  Anchor.toml  Cargo.toml  ENV_CONFIG.md  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vercel.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/(dashboard)/: layout.tsx
app/disclaimer/: layout.tsx  page.tsx
app/docs/: layout.tsx  page.tsx
components/: ActivateLevelButton.tsx  Header.tsx  IntlProvider.tsx  LanguageSwitcher.tsx  MobileMenu.tsx  ReferralNotifications.tsx  RootBody.tsx  Toaster.tsx  TxOverlay.tsx  TxOverlayGlobal.tsx  WalletModal.tsx
components/dashboard/: ActivationsSparkline.tsx  BottomNav.tsx  Card.tsx  KpiCard.tsx  LatestActivity.tsx  LevelCard.tsx  LevelDetailCard.tsx  NotifierBlock.tsx  PartnerActivityTable.tsx  PartnerStats.tsx  PayoutBreakdown.tsx  PlayerStatusCard.tsx  PlayerStatusCardInner.tsx  PullToRefresh.tsx  Sidebar.tsx  Topbar.tsx  (+2 more)
docs/: GIT_FAQ.md  HELIUS_RPC_OPTIMIZATION.md
i18n/: client.ts  config.ts
idl/: solana_game.json
messages/: de.json  en.json  es.json  fr.json  id.json  ja.json  ko.json  pt.json  ru.json  tr.json  vi.json  zh.json
programs/solana_game/: Cargo.toml  security.txt
programs/solana_game/src/: lib.rs  processor.rs  state.rs
public/: _headers  browserconfig.xml  generate-og-image.html  manifest.json  robots.txt  sitemap.xml
scripts/: build.js  check-balance.js  get-wallet-address.js  init_config_v3.js  send-sol-batch.js  setup-helius-webhook.js
types/: level-matrix.ts  solana.d.ts
(+57 files in other folders)
