[package]
name = "solana_game"
version = "1.0.0"
edition = "2021"
description = "Solana Game smart contract"
license = "MIT"

[lib]
name = "solana_game"
crate-type = ["cdylib", "lib"]

[features]
default = []
no-entrypoint = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
cpi = ["no-entrypoint"]

anchor-debug = []
custom-heap = []
custom-panic = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.32.1" }
getrandom = { version = "0.2", features = ["custom"] }
solana-security-txt = "1.1.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true
